--- a/rapling_controller/package.xml
+++ b/rapling_controller/package.xml
@@ -8,11 +8,21 @@
   <author email="antonio.brandi@outlook.it">Antonio Brandi</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <depend>rclcpp</depend>
-  <depend>hardware_interface</depend>
-  <depend>rclcpp_lifecycle</depend>
-  <depend>pluginlib</depend>
-  <depend>libserial-dev</depend>
+  <build_depend>rclcpp</build_depend>
+  <build_depend>hardware_interface</build_depend>
+  <build_depend>rclcpp_lifecycle</build_depend>
+  <build_depend>pluginlib</build_depend>
+  <build_depend>moveit_msgs</build_depend>
+  <build_depend>trajectory_msgs</build_depend>
+  <build_depend>libserial</build_depend>
+
+  <exec_depend>rclcpp</exec_depend>
+  <exec_depend>hardware_interface</exec_depend>
+  <exec_depend>rclcpp_lifecycle</exec_depend>
+  <exec_depend>pluginlib</exec_depend>
+  <exec_depend>moveit_msgs</exec_depend>
+  <exec_depend>trajectory_msgs</exec_depend>
+  <exec_depend>libserial</exec_depend>
 
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
@@ -25,5 +35,4 @@
   <export>
     <build_type>ament_cmake</build_type>
   </export>
-
 </package>
