--- a/rapling_moveit_2/config/joint_limits.yaml
+++ b/rapling_moveit_2/config/joint_limits.yaml
@@ -10,21 +10,39 @@ default_acceleration_scaling_factor: 0.1
 joint_limits:
   joint_link_1:
     has_velocity_limits: true
+    min_position: 0.0
+    max_position: 5.2359
     max_velocity: 10.0
     has_acceleration_limits: true
     max_acceleration: 5.0
+
+
   joint_link_2:
     has_velocity_limits: true
+
+    min_position: 0.0
+    max_position: 3.14
+
     max_velocity: 10.0
     has_acceleration_limits: true
     max_acceleration: 5.0
+
   joint_link_3:
     has_velocity_limits: true
+
+    min_position: -1.57
+    max_position: 1.57
+    
     max_velocity: 10.0
     has_acceleration_limits: true
     max_acceleration: 5.0
+  
   joint_link_4:
     has_velocity_limits: true
+  
+    min_position: -1.57
+    max_position: 1.57
+  
     max_velocity: 10.0
     has_acceleration_limits: true
     max_acceleration: 5.0
