--- a/rapling_moveit_2/package.xml
+++ b/rapling_moveit_2/package.xml
@@ -11,6 +11,8 @@
   
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>rviz2</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>moveit_configs_utils</exec_depend>
   <exec_depend>moveit_ros_move_group</exec_depend>
   <exec_depend>rapling_description</exec_depend>
