se agregaron restricciones al task=1 y task =3 para asegurar el movimiento sin cambios bruscos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,8 @@
         "/home/lunanirvana/ros2_ws/install/arduinobot_msgs/local/lib/python3.10/dist-packages",
         "/opt/ros/humble/lib/python3.10/site-packages",
         "/opt/ros/humble/local/lib/python3.10/dist-packages"
-    ]
+    ],
+    "files.associations": {
+        "ranges": "cpp"
+    }
 }
