--- a/rapling_msgs/CMakeLists.txt
+++ b/rapling_msgs/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(std_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
-  "action/ArduinobotTask.action"
+  "action/RaplinTask.action"
 )
 
 ament_package()
