--- a/rapling_controller/config/rapling_controllers.yaml
+++ b/rapling_controller/config/rapling_controllers.yaml
@@ -25,5 +25,5 @@ arm_controller:
     state_interfaces:
       - position
 
-    open_loop_control: true
+    open_loop_control: false
     allow_integration_in_goal_trajectories: true
